--- a/Bookpouch/Settings.xaml
+++ b/Bookpouch/Settings.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Bookpouch"
-        Title="Settings" Height="550" Width="800" Background="#2d2d30">
+        Title="Settings" Height="650" Width="800" Background="#2d2d30">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -26,6 +26,7 @@
             <RowDefinition/>
             <RowDefinition Height="90"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -114,12 +115,15 @@
 
         <Label Grid.Row="9" Grid.Column="0" Content="{local:Lng SettingsCheckCoverDimensions}" Target="{Binding ElementName=CheckCoverDimensions}"/>
         <CheckBox Grid.Row="9" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CheckCoverDimensions" ToolTip="{local:Lng HintCheckCoverDimensions}"/>
+
+        <Label Grid.Row="10" Grid.Column="0" Content="{local:Lng SettingsDescriptionMaxLength}" Target="{Binding ElementName=DescriptionMaxLength}" />
+        <TextBox Grid.Row="10" Grid.Column="1" Width="80" Name="DescriptionMaxLength" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsDescriptionMaxLength}"/>
+
+        <Label Grid.Row="11" Grid.Column="0" Content="{local:Lng SettingsBooksDir}" Target="{Binding ElementName=BooksDir}" />
+        <Button Grid.Row="11" Grid.Column="1" Name="BooksDir"  HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="BooksDir_OnLoaded" Click="BooksDir_OnClick" ToolTip="{local:Lng HintSettingsBooksDir}"/>
         
-        <Label Grid.Row="10" Grid.Column="0" Content="{local:Lng SettingsBooksDir}" Target="{Binding ElementName=BooksDir}" />
-        <Button Grid.Row="10" Grid.Column="1" Name="BooksDir"  HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="BooksDir_OnLoaded" Click="BooksDir_OnClick" ToolTip="{local:Lng HintSettingsBooksDir}"/>
-        
-        <Label Grid.Row="11" Grid.Column="0" Content="{local:Lng SettingsDebug}" Target="{Binding ElementName=Debug}" />
-        <Button Grid.Row="11" Grid.Column="1" Name="Debug" Content="{local:Lng SettingsConsole}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
+        <Label Grid.Row="12" Grid.Column="0" Content="{local:Lng SettingsDebug}" Target="{Binding ElementName=Debug}" />
+        <Button Grid.Row="12" Grid.Column="1" Name="Debug" Content="{local:Lng SettingsConsole}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
 
     </Grid>
 </Window>
