--- a/Bookpouch/FilterWindow.xaml
+++ b/Bookpouch/FilterWindow.xaml
@@ -27,6 +27,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
             <RowDefinition/>
@@ -66,35 +67,12 @@
         <DatePicker Grid.Row="5" Grid.Column="1" Name="Created" LostFocus="DatePicker_OnChanged" SelectedDateFormat="Short" Width="125"/>
 
         <Label Grid.Row="6" Grid.Column="0" Content="{local:Lng EditBookCategory}" Target="{Binding ElementName=Category}"/>
-        <TextBox Grid.Row="6" Grid.Column="1" Name="Category" KeyUp="Category_OnKeyUp" Loaded="Category_OnLoaded"
+        <TextBox Grid.Row="6" Grid.Column="1" Name="Category" LostFocus="TextBox_OnChanged" Loaded="Category_OnLoaded"
                  ToolTip="{local:Lng HintEditBookCategory}"/>
 
-        <Border Grid.Row="7" Grid.Column="1" HorizontalAlignment="Left" CornerRadius="4" Background="#58585f" Width="250" Name="CategoryTagsBorder" Visibility="Collapsed" Padding="5 5 5 0" MinHeight="25">
-            <Border.Resources>
-                <Style BasedOn="{StaticResource DefaultButton}" TargetType="{x:Type Button}">
-                    <Setter Property="Margin" Value="0,0,5,5"/>
-                    <Setter Property="FontWeight" Value="Medium"/>
-                </Style>
-            </Border.Resources>
-
-            <ItemsControl x:Name="Categories">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Horizontal" VerticalAlignment="Center"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Button Content="{Binding Name}" BorderBrush="{Binding Color}" PreviewMouseLeftButtonUp="CategoryTag_OnPreviewMouseLeftButtonUp" />
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-
-        </Border>
 
         <Label Grid.Row="8" Grid.Column="0" Content="{local:Lng EditBookFavorite}" Target="{Binding ElementName=Favorite}"/>
-        <CheckBox Grid.Row="8" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked"
+        <CheckBox Grid.Row="8" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" IsThreeState="True" 
                   Name="Favorite" ToolTip="{local:Lng HintEditBookFavorite}"/>
 
         <Label Grid.Row="9" Grid.Column="0" Content="{local:Lng EditBookSync}" Target="{Binding ElementName=Sync}"/>
@@ -103,8 +81,8 @@
         <Label Grid.Row="10" Grid.Column="0" Content="{local:Lng EditBookDescription}"  Target="{Binding ElementName=Description}"/>
         <TextBox Grid.Row="10" Grid.Column="1" Name="Description" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
 
-        <Label Grid.Row="10" Grid.Column="0" Content="{local:Lng EditBookPath}"  Target="{Binding ElementName=Path}"/>
-        <TextBox Grid.Row="10" Grid.Column="1" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
+        <Label Grid.Row="11" Grid.Column="0" Content="{local:Lng EditBookPath}"  Target="{Binding ElementName=Path}"/>
+        <TextBox Grid.Row="11" Grid.Column="1" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
 
 
 
