--- a/Bookpouch/FilterWindow.xaml
+++ b/Bookpouch/FilterWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Bookpouch"
-        Title="EditBook" Height="500" Width="620" Background="#2d2d30">
+        Title="Filter" Height="390" Width="390" Background="#2d2d30">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -12,10 +12,6 @@
             <Style TargetType="RowDefinition">
                 <Setter Property="Height" Value="30"/>
             </Style>
-
-
-
-
             <!--End form style-->
         </ResourceDictionary>
     </Window.Resources>
@@ -33,6 +29,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="90" />
@@ -43,7 +40,7 @@
         <TextBox Grid.Row="0" Grid.Column="1" Name="Title" LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="1" Grid.Column="0" Content="{local:Lng EditBookAuthor}" Target="{Binding ElementName=Author}"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Name="Author" LostFocus="TextBox_OnChanged"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Name="Author" Loaded="Author_OnLoaded" LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="2" Grid.Column="0" Content="{local:Lng EditBookLanguage}" Target="{Binding ElementName=Language}"/>
         <ComboBox Grid.Row="2" Grid.Column="1" Name="Language" Loaded="Language_OnLoaded" SelectionChanged="Language_OnSelectionChanged">
@@ -67,7 +64,7 @@
         <DatePicker Grid.Row="5" Grid.Column="1" Name="Created" LostFocus="DatePicker_OnChanged" SelectedDateFormat="Short" Width="125"/>
 
         <Label Grid.Row="6" Grid.Column="0" Content="{local:Lng EditBookCategory}" Target="{Binding ElementName=Category}"/>
-        <TextBox Grid.Row="6" Grid.Column="1" Name="Category" LostFocus="TextBox_OnChanged" Loaded="Category_OnLoaded"
+        <TextBox Grid.Row="6" Grid.Column="1" Name="Category"  Loaded="Category_OnLoaded"
                  ToolTip="{local:Lng HintEditBookCategory}"/>
 
 
@@ -82,9 +79,6 @@
         <TextBox Grid.Row="10" Grid.Column="1" Name="Description" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
 
         <Label Grid.Row="11" Grid.Column="0" Content="{local:Lng EditBookPath}"  Target="{Binding ElementName=Path}"/>
-        <TextBox Grid.Row="11" Grid.Column="1" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
-
-
-
+        <TextBox Grid.Row="11" Grid.Column="1" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />        
     </Grid>
 </Window>
