--- a/Bookpouch/MainWindow.xaml
+++ b/Bookpouch/MainWindow.xaml
@@ -23,6 +23,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -76,17 +77,31 @@
             <TextBlock Name="InfoBox" TextWrapping="Wrap" VerticalAlignment="Top" Padding="5" TextAlignment="Center"
                        RenderTransformOrigin="0.5,0.5" Foreground="Black" />
         </Border>
-        
-        <DockPanel Name="FilterWrap" Grid.Row="1" Visibility="Collapsed"  VerticalAlignment="Top" HorizontalAlignment="Stretch" LastChildFill="False">
-            <StackPanel Name="FilterList" Orientation="Horizontal" DockPanel.Dock="Left"/>
-            <Button Name="ClearFilter" Click="ClearFilter_OnMouseLeftButtonUp" Padding="10 0 0 0" DockPanel.Dock="Right" Content="{local:Lng BookGridClearFilter}" />
+
+        <ItemsControl Grid.Row="1" x:Name="FilterPresetList">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" x:Name="FilterPresetListWrap"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Button Content="{Binding Name}" Click="SetFilterPreset_OnClick" PreviewMouseRightButtonUp="SetFilterPreset_OnPreviewMouseRightButtonUp" Margin="0 0 5 5"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+        <DockPanel Name="FilterWrap" Grid.Row="2" Visibility="Collapsed"  VerticalAlignment="Top" HorizontalAlignment="Stretch" LastChildFill="False">
+            <WrapPanel Name="FilterList" Orientation="Horizontal" DockPanel.Dock="Left"/>
+            <Button Name="ClearFilter" Click="ClearFilter_OnMouseLeftButtonUp" Margin="5 0 0 0" DockPanel.Dock="Right" Content="{local:Lng BookGridClearFilter}" />
             <Button Name="SavePreset" DockPanel.Dock="Right" Content="{local:Lng SavePreset}" ToolTip="{local:Lng HintSavePreset}" Click="SavePreset_OnClick"/>
         </DockPanel>
-        <TextBox Grid.Row="1" HorizontalAlignment="Right" Name="FilterPresetName" Visibility="Collapsed" KeyUp="FilterPresetName_OnKeyUp" ToolTip="{local:Lng HintFilterPresetName}"/>
+        <TextBox Grid.Row="2" HorizontalAlignment="Right" Name="FilterPresetName" Visibility="Collapsed" KeyUp="FilterPresetName_OnKeyUp" ToolTip="{local:Lng HintFilterPresetName}"/>
 
-        <TextBox HorizontalAlignment="Left" VerticalAlignment="Top" Name="FilterName" KeyUp="FilterName_OnkeyUp" Grid.Row="2" Visibility="Collapsed" Canvas.ZIndex="1" />
+        <TextBox HorizontalAlignment="Left" VerticalAlignment="Top" Name="FilterName" KeyUp="FilterName_OnkeyUp" Grid.Row="3" Visibility="Collapsed" Canvas.ZIndex="1" />
 
-        <DataGrid x:Name="BookGrid" Grid.Row="2" IsReadOnly="True" AutoGenerateColumns="False" EnableColumnVirtualization="True" EnableRowVirtualization="True"
+        <DataGrid x:Name="BookGrid" Grid.Row="3" IsReadOnly="True" AutoGenerateColumns="False" EnableColumnVirtualization="True" EnableRowVirtualization="True"
                   Loaded="BookGrid_OnLoaded" VerticalAlignment="Top" CanUserResizeRows="False" RowHeaderWidth="1" KeyUp="BookGrid_OnKeyUp" PreviewMouseRightButtonUp="BookGrid_PreviewMouseRightButtonUp" PreviewMouseLeftButtonUp="BookGrid_PreviewMouseRightButtonUp"
                   GridLinesVisibility="None"  RowBackground="#5d5d5d" AlternatingRowBackground="#454545"   Background="#569cd6" CanUserSortColumns="True"
                   Template="{StaticResource DataGrid}">                      
