--- a/Bookpouch/FilterWindow.xaml
+++ b/Bookpouch/FilterWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Bookpouch"
-        Title="Filter" Height="390" Width="390" Background="#2d2d30">
+        Title="Filter" Height="420" Width="370" Background="#2d2d30">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -29,7 +29,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="90" />
@@ -86,6 +86,8 @@
         <TextBox Grid.Row="10" Grid.Column="1" Name="Description" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
 
         <Label Grid.Row="11" Grid.Column="0" Content="{local:Lng EditBookPath}"  Target="{Binding ElementName=Path}"/>
-        <TextBox Grid.Row="11" Grid.Column="1" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />        
+        <TextBox Grid.Row="11" Grid.Column="1" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />       
+        
+        <Button Grid.Row="12" Grid.Column="1" Click="ApplyFilter_OnClick" VerticalAlignment="Top" Margin="0 5 0 0" Content="{local:Lng ApplyFilter}"/>
     </Grid>
 </Window>
