--- a/Bookpouch/Settings.xaml
+++ b/Bookpouch/Settings.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Bookpouch"
-        Title="Settings" Height="650" Width="800" Background="#2d2d30">
+        Title="Settings" Height="620" Width="400" Background="#2d2d30" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
